@@ -1,3 +1,7 @@
+2002-10-23  Bill Bumgarner  <bbum@codefab.com>
+	* Added a test_paths test suite to Foundation.  Tests one function
+	(currently causes a bus error).
+
 2002-10-22  Bill Bumgarner  <bbum@codefab.com>
 	* Split Foundation unit tests into two suites.
 
